# pylogics

./: 404.html  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml  tox.ini
.github/: RELEASE_PR.md
.github/workflows/: lint.yml  test.yml
docs/: grammars.md  introduction.md  parsing.md  references.md  supported_logics.md  syntax.md
grammars/: index.html
introduction/: index.html
parsing/: index.html
pylogics/: __init__.py  exceptions.py
pylogics/deduction/: __init__.py
pylogics/deduction/fol/: __init__.py  base.py  nd.py
pylogics/helpers/: __init__.py  cache_hash.py  misc.py
pylogics/parsers/: __init__.py  base.py  ldl.lark  ldl.py  ltl.lark  ltl.py  pl.lark  pl.py  pltl.lark  pltl.py  propositional.lark  propositional.py
pylogics/semantics/: __init__.py  base.py  pl.py  propositional.py
pylogics/syntax/: __init__.py  base.py  fol.py  ldl.py  ltl.py  pl.py  pltl.py  propositional.py
pylogics/utils/: __init__.py  to_string.py
references/: index.html
scripts/: check_copyright.py  sync-tox-ini.py  update-dependencies.py  whitelist.py
search/: search_index.json
supported_logics/: index.html
syntax/: index.html
tests/: __init__.py  conftest.py  test_base.py  test_docs.py  test_exceptions.py  test_helpers.py  test_ldl.py  test_ltl.py  test_main.py  test_pl.py  test_pltl.py  test_propositional.py
tests/test_docs/: __init__.py  base.py  test_grammars.py  test_introduction.py  test_parsing.py
tests/test_syntax/: __init__.py  test_propositional.py
