[tool.poetry]
name = "pylogics"
version = "0.2.1"
description = "A Python library for logic formalisms representation and manipulation."
authors = ["MarcoFavorito <marco.favorito@gmail.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "https://whitemech.github.io/pylogics"
repository = "https://github.com/whitemech/pylogics.git"
documentation = "https://whitemech.github.io/pylogics"
keywords = [
    "logic",
    "propositional logic",
    "predicate logic",
    "temporal logic"
]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
#packages = []
include = []


#[tool.poetry.scripts]
#script_name = 'path/to/script'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/whitemech/pylogics/issues"
"Pull Requests" = "https://github.com/whitemech/pylogics/pulls"


[tool.poetry.dependencies]
python = ">=3.8,<4.0"
lark = "^1.1.5"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
black = "^23.3.0"
codecov = "^2.1.13"
flake8-bugbear = "^23.3"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.5.0"
flake8-isort = "^6.0.0"
hypothesis = "^6.76.0"
hypothesis-pytest = "^0.19.0"
ipython = "^8.12.2"
isort = "^5.12.0"
jupyter = "^1.0.0"
markdown = "^3.3.4"
markdown-include = "^0.8.1"
mistune = "^2.0.5"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.15"
mknotebooks = "^0.7.1"
mypy = "^1.3.0"
packaging = "^23.0"
pylint = "^2.17.4"
pymdown-extensions = "^10.0.1"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.12.0"
safety = "^2.4.0b1"
toml = "^0.10.2"
tox = "^4.4.12"
twine = "^4.0.2"
types-requests = "^2.31.0.1"
types-setuptools = ">=67.8,<69.0"
types-toml = "^0.10.8.6"
vulture = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
